# thsr-auto-book

./: .env.example  .gitignore  README.md  book.py  browser.py  config.py  design.md  discord_client.py  exceptions.py  main.py  monitor.py  proposal.md  pyproject.toml  search.py  setup.py  spec.md  tasks.md
tests/: conftest.py  test_book.py  test_config.py
thsr_auto_book.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
